--- a/styles.css
+++ b/styles.css
@@ -80,15 +80,26 @@ h1 {
 
 .hyes {
   margin-left: 30px;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 600px) {
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    margin-top: 70px;
+    justify-content: center;
+    width: 100%;
+    height: 150px;
+  }
+
   #header {
     margin-left: 70px;
   }
   #noBtn {
     position: absolute;
     margin-left: 200px;
+    margin-right: 40px;
     transition: 0.5s;
     height: 70px;
     width: 110px;
@@ -98,7 +109,7 @@ h1 {
   /* width: 80px; */
   #yesBtn {
     position: absolute;
-    margin-right: 80px;
+    margin-right: 110px;
     transition: 0.5s;
     height: 70px;
     width: 110px;
